--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,17 @@ label {
 }
 .button--white:hover, .button--white:focus {
   color: var(--accent-color);
-  text-decoration: none;
+  border-color: var(--light-blue-text);
+}
+
+.button--red {
+  color: #f26666;
+  border: 1px solid #f26666;
+  background-color: var(--primary-background-color);
+}
+.button--red:hover, .button--red:focus {
+  color: var(--secondary-text-color);
+  background-color: #f26666;
   border-color: var(--light-blue-text);
 }
 
@@ -789,6 +799,7 @@ input[type=radio] {
 }
 
 .services-cards__item {
+  width: 23%;
   padding: 30px 20px;
   border-radius: 10px;
   transition: transform var(--timing-function), filter var(--timing-function), outline var(--timing-function);
@@ -799,7 +810,10 @@ input[type=radio] {
   transform: scale(1.02);
 }
 .services-cards__item > a {
-  margin: 40px 0 0 0;
+  margin: 30px 0 0 0;
+}
+.services-cards__item .button {
+  margin: 0 auto;
 }
 
 .services-cards__item--blue {
@@ -876,7 +890,7 @@ input[type=radio] {
 }
 
 .services-vps__list {
-  gap: 80px;
+  gap: 30px;
   display: flex;
   justify-content: space-between;
 }
@@ -913,6 +927,9 @@ input[type=radio] {
     justify-content: space-around;
     gap: 50px;
   }
+  .services-cards__item {
+    width: 40%;
+  }
   .services-vps__list {
     flex-wrap: wrap;
     gap: 30px;
@@ -927,6 +944,9 @@ input[type=radio] {
   }
   .services-dedicated__item {
     width: 100%;
+  }
+  .services-cards__item {
+    width: 80%;
   }
   .services-vps__list {
     width: 100%;
@@ -1165,7 +1185,7 @@ input[type=radio] {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 60px;
+  gap: 30px;
 }
 
 .values__content--1 {
@@ -1176,96 +1196,15 @@ input[type=radio] {
 }
 
 .values__content--2 {
-  width: 30%;
-}
-
-.values__text--before_1 {
-  position: relative;
-}
-
-.values__text--before_1::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: -80px;
-  width: 50px;
-  height: 45px;
-  transform: translateY(-50%);
-  background-image: url(../images/value-illustration_1.svg);
-}
-
-.values__text--before_2 {
-  position: relative;
-}
-
-.values__text--before_2::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: -80px;
-  width: 50px;
-  height: 50px;
-  transform: translateY(-50%);
-  background-image: url(../images/value-illustration_2.svg);
-}
-
-.values__text--before_3 {
-  position: relative;
-}
-
-.values__text--before_3::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: -83px;
-  width: 50px;
-  height: 52px;
-  transform: translateY(-50%);
-  background-image: url(../images/value-illustration_3.svg);
-}
-
-.values__text--before_4 {
-  position: relative;
-}
-
-.values__text--before_4::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: -95px;
-  width: 73px;
-  height: 55px;
-  transform: translateY(-50%);
-  background-image: url(../images/value-illustration_4.svg);
-}
-
-.values__text--before_5 {
-  position: relative;
-}
-
-.values__text--before_5::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: -100px;
-  width: 83px;
-  height: 57px;
-  transform: translateY(-50%);
-  background-image: url(../images/value-illustration_5.svg);
-}
-
-.values__content--3 {
-  padding-top: 30px;
-  width: 30%;
+  width: 40%;
 }
 
 .values__description {
   margin-bottom: 30px;
+}
+
+.values__text {
+  white-space: nowrap;
 }
 
 .values__list--img {
@@ -1274,19 +1213,30 @@ input[type=radio] {
   gap: 20px;
 }
 
-.values__list--description {
+.values__list__content {
+  width: 100%;
   display: flex;
   flex-flow: column;
-  gap: 60px;
+  gap: 20px;
 }
 
 .values__item {
+  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
+.values__illusrtation {
+  width: 85px;
+}
+
+.values__svg {
+  margin: 0 auto;
+}
+
 .values__text {
+  width: 70%;
   font-size: 12px;
 }
 
@@ -1296,13 +1246,20 @@ input[type=radio] {
 
 @media screen and (max-width: 1199px) {
   .values__content--1 {
+    gap: 20px;
     width: 50%;
   }
-  .values__box {
-    gap: 120px;
+  .values__content--1 .section-subtitle {
+    margin-bottom: 10px;
   }
-  .values__list {
-    gap: 30px;
+  .values__content--2 {
+    width: 50%;
+  }
+  .values__item {
+    gap: 20px;
+  }
+  .values__text {
+    white-space: normal;
   }
 }
 @media screen and (max-width: 767px) {
@@ -1310,16 +1267,15 @@ input[type=radio] {
     padding-top: 30px;
     padding-bottom: 30px;
   }
-  .values__list {
-    flex-wrap: wrap;
-    justify-content: space-around;
+  .values__content--1 {
+    width: 100%;
+  }
+  .values__content--2 {
+    width: 100%;
   }
   .values__box {
     flex-flow: column;
     gap: 30px;
-  }
-  .values h3 {
-    margin-bottom: 10px;
   }
 }
 .payment {
@@ -1754,46 +1710,6 @@ input[type=radio] {
     bottom: 125px;
   }
 }
-.hero-dedicated {
-  padding-bottom: 60px;
-}
-
-.hero-dedicated__list {
-  list-style: disc;
-  color: var(--secondary-text-color);
-  padding-left: 20px;
-}
-
-.hero-dedicated__text {
-  color: var(--secondary-text-color);
-  font-size: 24px;
-}
-
-.hero-dedicated__item:not(:last-child) {
-  margin-bottom: 10px;
-}
-
-.hero-dedicated__svg {
-  width: 90%;
-}
-
-.dedicated-faq__background {
-  background-image: url(/images/dedicated-faq_background.svg);
-}
-
-.dedicated-services {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.dedicated-services .services-vps__list {
-  margin-bottom: 60px;
-}
-
-.dedicated-services .services-card__list {
-  margin-bottom: 0;
-}
-
 .dedicated-contact .section-title {
   margin-bottom: 30px;
 }
@@ -1878,27 +1794,64 @@ input[type=radio] {
   padding-bottom: 60px;
 }
 
-.price-billing__content {
-  margin-bottom: 60px;
-}
-
 .price-dedicated__card {
   background-color: var(--price-card-bcg);
   border-radius: 10px;
-  padding: 10px 20px;
-  justify-content: space-between;
+  padding: 20px;
+  justify-content: space-around;
   align-items: center;
   display: flex;
   gap: 30px;
+  margin-bottom: 30px;
+  transition: transform var(--timing-function), filter var(--timing-function), outline var(--timing-function);
+  position: relative;
 }
 .price-dedicated__card .services-cards__title {
   margin-bottom: 0;
+}
+
+.price-dedicated__label::before {
+  content: "";
+  text-align: center;
+  position: absolute;
+  top: 15px;
+  left: -10px;
+  padding: 3px 10px;
+  color: var(--secondary-text-color);
+  border-radius: 3px;
+}
+
+.price-dedicated__label--red::before {
+  content: "sold out";
+  background-color: #f26666;
+}
+
+.price-dedicated__label--green::before {
+  content: "in stock";
+  background-color: #61ce58;
+}
+
+.price-dedicated__label--orange::before {
+  content: " 1 in stock";
+  background-color: #ffb015;
+}
+
+.price-dedicated__gif {
+  position: absolute;
+  top: 0;
+  left: 5px;
+}
+
+.price-dedicated__card:hover {
+  filter: drop-shadow(0px 5px 11px rgba(0, 0, 0, 0.3));
+  transform: scale(1.02);
 }
 
 .price-billing__buttons {
   display: flex;
   gap: 30px;
   align-items: center;
+  margin-bottom: 60px;
 }
 
 .price-billing__item {
@@ -1927,8 +1880,14 @@ input[type=radio] {
 
 .price-dedicated__list {
   display: flex;
-  gap: 30px;
-  width: 80%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  width: 70%;
+}
+
+.price-dedicated__item {
+  width: 16%;
 }
 
 .price-dedicated__tariff {
@@ -1936,7 +1895,15 @@ input[type=radio] {
 }
 
 .price-dedicated__box {
-  width: 10%;
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+  justify-content: space-between;
+  width: 20%;
+  align-items: center;
+}
+.price-dedicated__box .button {
+  width: 100%;
 }
 
 .price-dedicated__info {
@@ -1944,4 +1911,158 @@ input[type=radio] {
   display: flex;
   text-align: left;
   flex-wrap: nowrap;
+  opacity: 1;
+}
+
+.price-dedicated__info:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.price-dedicated__info--uppercase {
+  text-transform: uppercase;
+  opacity: 0.5;
+}
+
+.price-dedicated__price {
+  margin: 0;
+  font-size: 18px;
+}
+
+.price-dedicated__price--crossed {
+  opacity: 0.6;
+  text-decoration: line-through;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 1199px) {
+  .price-billing__buttons {
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 767px) {
+  .price-billing__buttons {
+    flex-wrap: wrap;
+  }
+  .price-billing__buttons .section-subtitle {
+    width: 100%;
+  }
+  .price-billing__buttons {
+    justify-content: space-around;
+  }
+  .price-dedicated__card {
+    flex-flow: column;
+  }
+  .price-dedicated__list {
+    justify-content: space-around;
+    width: 90%;
+    row-gap: 20px;
+  }
+  .price-dedicated__item {
+    width: 45%;
+  }
+  .price-dedicated__box {
+    width: 100%;
+  }
+  .price-dedicated__tariff {
+    width: 100%;
+  }
+}
+.hero-dedicated {
+  padding-bottom: 60px;
+}
+
+.hero-dedicated__list {
+  list-style: disc;
+  color: var(--secondary-text-color);
+  padding-left: 20px;
+}
+
+.hero-dedicated__text {
+  color: var(--secondary-text-color);
+  font-size: 24px;
+}
+
+.hero-dedicated__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.hero-dedicated__svg {
+  width: 90%;
+}
+
+.dedicated-faq__background {
+  background-image: url(/images/dedicated-faq_background.svg);
+}
+
+.dedicated-services {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.dedicated-services .services-vps__list {
+  margin-bottom: 60px;
+}
+
+.dedicated-services .services-card__list {
+  margin-bottom: 0;
+}
+
+.nvme-ssd .section-title {
+  margin-bottom: 30px;
+}
+
+.nvme-data {
+  padding-bottom: 60px;
+}
+
+.price-billing__buttons--gap {
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.nvme-data__list {
+  display: flex;
+  justify-content: space-around;
+}
+
+.nvme-data__item {
+  width: 20%;
+}
+
+.nvme-data__description {
+  text-align: center;
+}
+
+.nvme-ssd {
+  padding-bottom: 60px;
+}
+
+.nvme-ssd__box {
+  width: 50%;
+  display: flex;
+  flex-flow: column;
+  gap: 30px;
+}
+
+.nvme-ssd__list {
+  width: 50%;
+}
+
+.nvme-ssd__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 60px;
+}
+
+.nvme-ssd .bonuses__item {
+  width: 100%;
+}
+
+.nvme-ssd__image {
+  margin: 0 auto;
+}
+
+.services-cards__list--jc {
+  justify-content: center;
 }/*# sourceMappingURL=main.css.map */
