--- a/sass/components/_price-dedicated.scss
+++ b/sass/components/_price-dedicated.scss
@@ -3,28 +3,77 @@
   padding-bottom: 60px;
 }
 
-.price-billing__content {
-  margin-bottom: 60px;
-}
-
 .price-dedicated__card {
   background-color: var(--price-card-bcg);
   border-radius: 10px;
-  padding: 10px 20px;
-  justify-content: space-between;
+  padding: 20px;
+  justify-content: space-around;
   align-items: center;
   display: flex;
   gap: 30px;
+  margin-bottom: 30px;
+  transition: transform var(--timing-function), filter var(--timing-function),
+    outline var(--timing-function);
+  position: relative;
 
   .services-cards__title {
     margin-bottom: 0;
   }
 }
 
+.price-dedicated__label {
+  &::before {
+    content: "";
+    text-align: center;
+    position: absolute;
+    top: 15px;
+    left: -10px;
+    // transform: rotate(-45deg);
+    padding: 3px 10px;
+    color: var(--secondary-text-color);
+    border-radius: 3px;
+
+    // filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
+  }
+}
+
+.price-dedicated__label--red {
+  &::before {
+    content: "sold out";
+    background-color: #f26666;
+  }
+}
+
+.price-dedicated__label--green {
+  &::before {
+    content: "in stock";
+    background-color: #61ce58;
+  }
+}
+
+.price-dedicated__label--orange {
+  &::before {
+    content: " 1 in stock";
+    background-color: #ffb015;
+  }
+}
+
+.price-dedicated__gif {
+  position: absolute;
+  top: 0;
+  left: 5px;
+}
+
+.price-dedicated__card:hover {
+  filter: drop-shadow(0px 5px 11px rgba(0, 0, 0, 0.3));
+  transform: scale(1.02);
+}
+
 .price-billing__buttons {
   display: flex;
   gap: 30px;
   align-items: center;
+  margin-bottom: 60px;
 }
 
 .price-billing__item {
@@ -53,8 +102,14 @@
 
 .price-dedicated__list {
   display: flex;
-  gap: 30px;
-  width: 80%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  width: 70%;
+}
+
+.price-dedicated__item {
+  width: 16%;
 }
 
 .price-dedicated__tariff {
@@ -62,7 +117,16 @@
 }
 
 .price-dedicated__box {
-  width: 10%;
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+  justify-content: space-between;
+  width: 20%;
+  align-items: center;
+
+  .button {
+    width: 100%;
+  }
 }
 
 .price-dedicated__info {
@@ -70,4 +134,69 @@
   display: flex;
   text-align: left;
   flex-wrap: nowrap;
+  opacity: 1;
+}
+
+.price-dedicated__info:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.price-dedicated__info--uppercase {
+  text-transform: uppercase;
+  opacity: 0.5;
+}
+
+.price-dedicated__price {
+  margin: 0;
+  font-size: 18px;
+}
+
+.price-dedicated__price--crossed {
+  opacity: 0.6;
+  text-decoration: line-through;
+  margin-right: 10px;
+  // text-decoration-color: red;
+}
+
+@media screen and (max-width: 1199px) {
+  .price-billing__buttons {
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .price-billing__buttons {
+    flex-wrap: wrap;
+  }
+
+  .price-billing__buttons .section-subtitle {
+    width: 100%;
+  }
+
+  .price-billing__buttons {
+    justify-content: space-around;
+  }
+
+  .price-dedicated__card {
+    flex-flow: column;
+  }
+
+  .price-dedicated__list {
+    justify-content: space-around;
+    width: 90%;
+
+    row-gap: 20px;
+  }
+
+  .price-dedicated__item {
+    width: 45%;
+  }
+
+  .price-dedicated__box {
+    width: 100%;
+  }
+
+  .price-dedicated__tariff {
+    width: 100%;
+  }
 }
