--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -103,7 +103,7 @@ input[type="radio"] {
 }
 
 .services-cards__item {
-  // width: 20%;
+  width: 23%;
   padding: 30px 20px;
   border-radius: 10px;
   transition: transform var(--timing-function), filter var(--timing-function),
@@ -116,7 +116,11 @@ input[type="radio"] {
   }
 
   & > a {
-    margin: 40px 0 0 0;
+    margin: 30px 0 0 0;
+  }
+
+  .button {
+    margin: 0 auto;
   }
 }
 
@@ -200,7 +204,7 @@ input[type="radio"] {
 }
 
 .services-vps__list {
-  gap: 80px;
+  gap: 30px;
   display: flex;
   justify-content: space-between;
 }
@@ -239,6 +243,10 @@ input[type="radio"] {
     gap: 50px;
   }
 
+  .services-cards__item {
+    width: 40%;
+  }
+
   .services-vps__list {
     flex-wrap: wrap;
     gap: 30px;
@@ -256,6 +264,10 @@ input[type="radio"] {
 
   .services-dedicated__item {
     width: 100%;
+  }
+
+  .services-cards__item {
+    width: 80%;
   }
 
   .services-vps__list {
