--- a/css/main.css
+++ b/css/main.css
@@ -2003,7 +2003,7 @@ input[type=radio] {
   margin-bottom: 60px;
 }
 
-.dedicated-services .services-card__list {
+.dedicated-services__list {
   margin-bottom: 0;
 }
 
