--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,10 @@ label {
   margin: 0;
 }
 
+button:focus {
+  outline: none;
+}
+
 .vsys-container {
   padding-left: 15px;
   padding-right: 15px;
@@ -269,6 +273,7 @@ label {
   .section-title {
     font-size: 24px;
     margin: 0 0 30px 0;
+    text-align: center;
   }
   .dropdown__link {
     color: var(--secondary-text-color);
@@ -554,9 +559,9 @@ label {
     transform: translateY(0%);
     pointer-events: all;
   }
-  .mobile-menu .mobile-menu__vsys-container {
-    padding-left: 60px;
-    padding-right: 60px;
+  .mobile-menu .mobile-menu__container {
+    width: fit-content;
+    margin: 0 auto;
   }
   .mobile-menu .navbar__list {
     flex-flow: column;
@@ -1744,6 +1749,12 @@ input[type=radio] {
     gap: 30px;
   }
 }
+@media screen and (max-width: 767px) {
+  .dedicated-contact__content {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 .bonuses {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1775,6 +1786,11 @@ input[type=radio] {
   font-size: 34px;
 }
 
+@media screen and (max-width: 767px) {
+  .bonuses__item {
+    width: 100%;
+  }
+}
 .dedicated-agvantages {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1785,13 +1801,49 @@ input[type=radio] {
   gap: 60px;
 }
 
-.dedicated-agvantages__description {
-  font-size: 16px;
+.dedicated-agvantages__image {
+  width: 300px;
+  order: 2;
 }
 
+.dedicated-agvantages__description {
+  font-size: 16px;
+  order: 1;
+}
+
+@media screen and (max-width: 767px) {
+  .dedicated-agvantages__content {
+    flex-flow: column;
+    gap: 30px;
+  }
+  .dedicated-agvantages__image {
+    margin: 0 auto;
+    width: 200px;
+    order: 1;
+  }
+  .dedicated-agvantages__description {
+    order: 2;
+  }
+}
 .price-dedicated {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.price-dedicated__container {
+  gap: 30px;
+  display: flex;
+  margin-bottom: 60px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.price-billing__item {
+  transition: filter var(--timing-function);
+}
+
+.price-billing__item:hover {
+  filter: drop-shadow(0px 11px 5px rgba(0, 0, 0, 0.15));
 }
 
 .price-dedicated__card {
@@ -1845,21 +1897,6 @@ input[type=radio] {
 .price-dedicated__card:hover {
   filter: drop-shadow(0px 5px 11px rgba(0, 0, 0, 0.3));
   transform: scale(1.02);
-}
-
-.price-billing__buttons {
-  display: flex;
-  gap: 30px;
-  align-items: center;
-  margin-bottom: 60px;
-}
-
-.price-billing__item {
-  transition: filter var(--timing-function);
-}
-
-.price-billing__item:hover {
-  filter: drop-shadow(0px 11px 5px rgba(0, 0, 0, 0.15));
 }
 
 .price-billing__button {
@@ -1934,20 +1971,33 @@ input[type=radio] {
   margin-right: 10px;
 }
 
+.price-dedicated__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.price-billing__buttons {
+  display: flex;
+}
+
 @media screen and (max-width: 1199px) {
-  .price-billing__buttons {
-    justify-content: space-between;
+  .price-dedicated__content > .section-subtitle {
+    width: 150px;
+  }
+  .price-dedicated__container {
+    row-gap: 30px;
+    flex-flow: column;
+  }
+  .price-dedicated__content {
+    margin: 0 auto 0 0;
   }
 }
 @media screen and (max-width: 767px) {
-  .price-billing__buttons {
-    flex-wrap: wrap;
-  }
-  .price-billing__buttons .section-subtitle {
+  .price-dedicated__content {
     width: 100%;
-  }
-  .price-billing__buttons {
-    justify-content: space-around;
+    flex-flow: column;
   }
   .price-dedicated__card {
     flex-flow: column;
@@ -1965,6 +2015,12 @@ input[type=radio] {
   }
   .price-dedicated__tariff {
     width: 100%;
+  }
+  .price-billing__button {
+    padding: 5px 10px;
+  }
+  .price-billing__button .section-subtitle {
+    font-size: 12px;
   }
 }
 .hero-dedicated {
@@ -2065,4 +2121,14 @@ input[type=radio] {
 
 .services-cards__list--jc {
   justify-content: center;
+}
+
+@media screen and (max-width: 1199px) {
+  .nvme-data__list {
+    flex-flow: column;
+    gap: 30px;
+  }
+  .nvme-data__item {
+    width: 100%;
+  }
 }/*# sourceMappingURL=main.css.map */
