--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -48,6 +48,9 @@ label {
   margin: 0;
 }
 
+button:focus {
+  outline: none;
+}
 .vsys-container {
   padding-left: 15px;
   padding-right: 15px;
@@ -317,6 +320,7 @@ label {
   .section-title {
     font-size: 24px;
     margin: 0 0 30px 0;
+    text-align: center;
   }
   .dropdown__link {
     color: var(--secondary-text-color);
