--- a/sass/components/_bonuses.scss
+++ b/sass/components/_bonuses.scss
@@ -29,3 +29,9 @@
   color: var(--accent-color);
   font-size: 34px;
 }
+
+@media screen and (max-width: 767px) {
+  .bonuses__item {
+    width: 100%;
+  }
+}
