--- a/sass/components/_random-pages.scss
+++ b/sass/components/_random-pages.scss
@@ -66,4 +66,20 @@
   .nvme-data__item {
     width: 100%;
   }
+
+  .nvme-ssd__content {
+    flex-flow: column;
+  }
+
+  .nvme-ssd__box {
+    width: 100%;
+  }
+
+  .nvme-ssd__image {
+    width: 150px;
+  }
+
+  .nvme-ssd__list {
+    width: 100%;
+  }
 }
