--- a/sass/components/_splide.scss
+++ b/sass/components/_splide.scss
@@ -36,10 +36,9 @@
     display: none;
   }
 
-  .hero__title {
-    margin-bottom: 30px;
-    font-size: 28px;
-  }
+  // .hero__title {
+  //   font-size: 28px;
+  // }
 
   .hero__thumb {
     margin-bottom: 30px;
