--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,3 +20,4 @@
 @import "./components/price-dedicated";
 @import "./components/dedicated-page";
 @import "./components/random-pages";
+@import "./components/blog";
