--- a/css/main.css
+++ b/css/main.css
@@ -1696,10 +1696,6 @@ input[type=radio] {
   .hero__image {
     display: none;
   }
-  .hero__title {
-    margin-bottom: 30px;
-    font-size: 28px;
-  }
   .hero__thumb {
     margin-bottom: 30px;
   }
@@ -2023,6 +2019,15 @@ input[type=radio] {
     font-size: 12px;
   }
 }
+.dedicated-hero {
+  background: linear-gradient(165.95deg, rgba(74, 167, 240, 0.76) 10.01%, #e0f1ff 101.3%);
+  padding-top: 100px;
+}
+
+.dedicated-hero__background {
+  background-image: url(/images/dedicated-background__image.svg);
+}
+
 .hero-dedicated {
   padding-bottom: 60px;
 }
@@ -2030,7 +2035,7 @@ input[type=radio] {
 .hero-dedicated__list {
   list-style: disc;
   color: var(--secondary-text-color);
-  padding-left: 20px;
+  padding-left: 18px;
 }
 
 .hero-dedicated__text {
@@ -2063,6 +2068,22 @@ input[type=radio] {
   margin-bottom: 0;
 }
 
+@media screen and (max-width: 1199px) {
+  .hero-dedicated__text {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .hero-dedicated__text {
+    font-size: 16px;
+  }
+  .dedicated-hero .hero {
+    padding-bottom: 60px;
+  }
+  .dedicated-hero .hero__thumb {
+    padding-bottom: 0;
+  }
+}
 .nvme-ssd .section-title {
   margin-bottom: 30px;
 }
@@ -2143,4 +2164,30 @@ input[type=radio] {
   .nvme-ssd__list {
     width: 100%;
   }
+}
+.article-card__list {
+  justify-content: space-between;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  display: flex;
+  gap: 60px;
+}
+
+.article-card__item {
+  height: fit-content;
+  width: 30%;
+}
+
+.article-card__link {
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+}
+
+.article-card__title {
+  text-transform: inherit;
+}
+
+.article-card__image {
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
