--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,3 +21,5 @@
 @import "./components/dedicated-page";
 @import "./components/random-pages";
 @import "./components/blog";
+@import "./components/author-page.scss";
+@import "./components/article-page";
