--- a/sass/components/_faq.scss
+++ b/sass/components/_faq.scss
@@ -43,7 +43,7 @@
   transition: color var(--timing-function), transform var(--timing-function);
   cursor: pointer;
 
-  &:focus .accordion__title {
+  &:focus {
     color: var(--accent-color);
   }
 
@@ -54,14 +54,6 @@
   &:focus .menu-arrow--right {
     transform: rotate(0deg);
   }
-}
-
-.accordion__title {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  transition: color var(--timing-function);
 }
 
 .accordion__info {
