--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -111,6 +111,7 @@ button:focus {
   border-top: 4px solid\9;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
+  // transition: color var(--timing-function);
 }
 
 .menu-arrow--big {
