--- a/css/main.css
+++ b/css/main.css
@@ -2177,17 +2177,20 @@ input[type=radio] {
     width: 100%;
   }
 }
+.main-article__section {
+  padding-bottom: 60px;
+}
+
 .blog__title {
   margin-top: 60px;
 }
 
-.main-blog__list {
+.main-article__list {
   justify-content: space-between;
-  padding-bottom: 60px;
   display: flex;
 }
 
-.main-blog__item {
+.main-article__item {
   display: flex;
   width: 30%;
   justify-content: space-between;
@@ -2196,33 +2199,32 @@ input[type=radio] {
   filter: drop-shadow(0px 5px 11px rgba(0, 0, 0, 0.15));
 }
 
-.main-blog__item:hover {
+.main-article__item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   transform: scale(1.02);
 }
 
-.main-blog__item:hover .main-blog__text {
+.main-article__item:hover .main-article__text {
   transform: translateY(0);
 }
 
-.main-blog__description {
+.main-article__description {
   overflow: hidden;
   position: relative;
 }
 
-.main-blog__thumb {
+.main-article__thumb {
   display: flex;
   flex-flow: column;
-  gap: 20px;
-  padding: 10px;
 }
 
-.main-blog__info {
+.main-article__info {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
-.main-blog__author {
+.main-article__author {
   font-size: 12px;
   align-items: center;
   text-transform: uppercase;
@@ -2231,21 +2233,23 @@ input[type=radio] {
   font-weight: 700;
   width: 100%;
   position: relative;
+  padding: 10px;
   transition: color var(--timing-function);
 }
-.main-blog__author:hover {
+.main-article__author:hover {
   color: var(--accent-color);
 }
 
-.main-blog__icon {
+.main-article__icon {
   margin-right: -2px;
   margin-bottom: 2px;
   transform: scale(0.8);
 }
 
-.main-blog__text {
+.main-article__text {
   display: flex;
   color: var(--primary-text-color);
+  background-color: var(--primary-background-color);
   overflow: hidden;
   justify-content: center;
   position: absolute;
@@ -2257,27 +2261,42 @@ input[type=radio] {
   transition: transform var(--timing-function);
 }
 
-.main-blog__image {
+.main-article__image {
   fill: currentColor;
 }
 
-.main-blog__datetime {
+.main-article__datetime {
   font-size: 12px;
+  padding: 10px;
 }
 
-.main-blog__title {
+.main-article__article .section-subtitle {
+  transition: color var(--timing-function);
+}
+
+.main-article__article {
+  padding: 10px;
+}
+.main-article__article:hover .section-subtitle {
+  color: var(--accent-color);
+}
+
+.main-article__title {
   text-transform: inherit;
 }
 
-.main-blog__image {
+.main-article__image {
   width: 100%;
+}
+
+.tag__section {
+  margin-bottom: 60px;
 }
 
 .tag__list {
   display: flex;
   flex-flow: wrap;
   gap: 10px;
-  margin-bottom: 60px;
 }
 
 .tag__item {
@@ -2303,72 +2322,215 @@ input[type=radio] {
   align-items: center;
 }
 
-.blog-article__list {
-  flex-flow: wrap;
-  row-gap: 30px;
+.article__section {
+  padding-bottom: 60px;
 }
 
-.blog-article__item {
-  width: 22%;
+.article__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+.article__item {
+  display: flex;
+  width: 23%;
+  justify-content: space-between;
+  background-color: var(--price-card-bcg);
+  transition: box-shadow var(--timing-function), transform var(--timing-function);
+  filter: drop-shadow(0px 5px 11px rgba(0, 0, 0, 0.15));
+}
+
+.article__item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transform: scale(1.02);
+}
+
+.article__item:hover .article__text {
+  transform: translateY(0);
+}
+
+.article__description {
+  overflow: hidden;
+  position: relative;
+}
+
+.article__illustration {
+  width: 40%;
+}
+
+.article__thumb {
+  display: flex;
+  flex-flow: column;
+}
+
+.article__link .section-subtitle {
+  font-size: 14px;
+}
+
+.article__info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.article__author {
+  font-size: 12px;
+  align-items: center;
+  text-transform: uppercase;
+  width: 100%;
+  color: var(--price-accent-color);
+  font-weight: 700;
+  width: 100%;
+  position: relative;
+  padding: 10px;
+  transition: color var(--timing-function);
+}
+.article__author:hover {
+  color: var(--accent-color);
+}
+
+.article__icon {
+  margin-right: -2px;
+  margin-bottom: 2px;
+  transform: scale(0.8);
+}
+
+.article__text {
+  display: flex;
+  color: var(--primary-text-color);
+  background-color: var(--primary-background-color);
+  overflow: hidden;
+  justify-content: center;
+  position: absolute;
+  padding: 10px;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  transition: transform var(--timing-function);
+}
+
+.article__image {
+  fill: currentColor;
+}
+
+.article__datetime {
+  font-size: 12px;
+  padding: 10px;
+}
+
+.article__article .section-subtitle {
+  transition: color var(--timing-function);
+}
+
+.article__article {
+  padding: 10px;
+}
+.article__article:hover .section-subtitle {
+  color: var(--accent-color);
+}
+
+.article__title {
+  text-transform: inherit;
+}
+
+.article__image {
+  width: 100%;
 }
 
 @media screen and (min-width: 1199px) {
   .display-none--desk {
     display: none;
   }
-  .main-blog__text {
-    background-color: var(--primary-background-color);
-  }
 }
 @media screen and (max-width: 1199px) {
-  .main-blog__item {
-    background-color: var(--primary-background-color);
-  }
-  .main-blog__article {
-    display: flex;
-    flex-flow: column;
-    justify-content: space-between;
-  }
   .display-none--mobile {
     display: none;
   }
-  .main-blog__list {
+  .main-article__item {
+    background-color: var(--primary-background-color);
+  }
+  .main-article__article:hover .section-subtitle {
+    color: var(--primary-text-color);
+  }
+  .main-article__link {
+    padding: 10px;
+  }
+  .main-article__link:hover .section-subtitle {
+    color: var(--accent-color);
+  }
+  .main-article__article {
+    display: flex;
+    flex-flow: column;
+    padding: 0px;
+  }
+  .main-article__list {
     gap: 30px;
   }
-  .main-blog__text {
+  .main-article__text {
     height: fit-content;
     position: relative;
     transform: none;
     padding: 0;
+    margin-top: 10px;
   }
-  .main-blog__description {
+  .article__item {
+    width: 100%;
+    background-color: var(--primary-background-color);
+  }
+  .article__article:hover .section-subtitle {
+    color: var(--primary-text-color);
+  }
+  .article__link {
+    padding: 10px;
+  }
+  .article__link:hover .section-subtitle {
+    color: var(--accent-color);
+  }
+  .article__article {
+    display: flex;
+    align-items: center;
+    padding: 0px;
+  }
+  .display-none--mobile {
+    display: none;
+  }
+  .article__list {
+    gap: 30px;
+  }
+  .article__thumb {
+    width: 60%;
+  }
+  .article__text {
+    height: fit-content;
+    position: relative;
+    transform: none;
+    padding: 0;
+    margin-top: 10px;
+  }
+  .article__description {
     display: flex;
     flex-flow: column;
     gap: 10px;
   }
-  .main-blog__thumb {
-    padding: 0;
-  }
-  .other-blog__list {
+}
+@media screen and (max-width: 767px) {
+  .main-article__list {
     flex-flow: column;
   }
-  .other-blog__item {
+  .main-article__item {
     width: 100%;
   }
-  .other-blog__article {
-    flex-flow: inherit;
-    align-items: center;
+  .article__article {
+    flex-flow: column;
   }
-  .other-blog__info {
-    order: 2;
+  .article__illustration {
+    width: 100%;
   }
-  .other-blog__link {
-    width: 35%;
-  }
-  .other-blog__thumb {
-    width: 65%;
-    height: 100%;
-    justify-content: space-between;
+  .article__thumb {
+    width: 100%;
   }
 }
 .author__section {
@@ -2383,9 +2545,12 @@ input[type=radio] {
   color: var(--primary-text-color);
   display: flex;
   align-items: center;
+  font-weight: 500;
   gap: 10px;
   margin-top: 30px;
-  margin-left: -8px;
+  margin-left: -19px;
+  width: fit-content;
+  padding: 10px;
   transition: color var(--timing-function);
 }
 .author-page__breadcrumbs:hover {
@@ -2534,4 +2699,47 @@ input[type=radio] {
   .article-page__subtitle {
     text-align: center;
   }
+}
+.hidden {
+  display: none;
+}
+
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  padding: 60px;
+  gap: 30px;
+}
+
+.pagination-numbers {
+  display: flex;
+  gap: 15px;
+}
+
+.pagination-number {
+  padding: 10px;
+  border: none;
+  background-color: var(--primary-background-color);
+  transition: color var(--timing-function);
+}
+.pagination-number:hover {
+  color: var(--accent-color);
+}
+
+.pagination-number.active {
+  width: 40px;
+  height: 40px;
+  color: var(--secondary-text-color);
+  background: var(--accent-color);
+  border-radius: 100px;
+}
+
+.pagination-button {
+  padding: 10px;
+  background-color: var(--primary-background-color);
+  border: none;
+  transition: color var(--timing-function);
+}
+.pagination-button:hover {
+  color: var(--accent-color);
 }/*# sourceMappingURL=main.css.map */
