--- a/sass/components/_author-page.scss
+++ b/sass/components/_author-page.scss
@@ -10,9 +10,12 @@
   color: var(--primary-text-color);
   display: flex;
   align-items: center;
+  font-weight: 500;
   gap: 10px;
   margin-top: 30px;
-  margin-left: -8px;
+  margin-left: -19px;
+  width: fit-content;
+  padding: 10px;
   transition: color var(--timing-function);
   &:hover {
     color: var(--accent-color);
