--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,3 +23,4 @@
 @import "./components/blog";
 @import "./components/author-page.scss";
 @import "./components/article-page";
+@import "./components/pagination";
