--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,3 +24,4 @@
 @import "./components/author-page.scss";
 @import "./components/article-page";
 @import "./components/pagination";
+@import "./components/vl-section";
